# sgf-xmonad-config

./: .gitignore  LICENSE  Makefile  Makefile-common  README  package.yaml  sgf-xmonad.cabal  stack.yaml  xmonad-disable-keys-v1.hs  xmonad-disable-keys-via-env.hs  xmonad-docks-restack.hs  xmonad-test-restart.hs  xmonad.hs
bugs/: dot_xmobarrc
extra-deps/: sgf-haskell-common  sgf-xmonad-modules  xmonad-contrib
extra-pkgs/: xmobar
src/: Xsession  default-xmonad.hs  dot_Xsession  parcelliterc  variants-xmonad.hs  xmobarrc  xmobarrcAlt  xmonad-cmd.hs  xmonad.hs
src/Sgf/: XMonad.hs
src/Sgf/Control/: Exception.hs  Lens.hs
src/Sgf/Data/: List.hs
src/Sgf/XMonad/: Docks.hs  Restartable.hs  Session.hs  VNC.hs
src/Sgf/XMonad/Actions/: Submap.hs
src/Sgf/XMonad/Docks/: Trayer.hs  Xmobar.hs
src/Sgf/XMonad/Util/: EZConfig.hs  EntryHelper.hs  Run.hs
src/Xresources/: XTerm  solarized.m4
src/Xsession.d/: run_cmd.sh  xkb_ctrl_esc_to_super.sh
src/gtk-3.0/: settings.ini
src/xkb/: ctrl_esc_to_super
