name:                sgf-xmonad
version:             0.4.1.1
synopsis:            sgf's xmonad config
description:         sgf's xmonda config
homepage:            http://github.com/sgf-dma/my-xmonad-config
license:             BSD3
license-file:        LICENSE
author:              sgf
maintainer:          sgf.dma@gmail.com
copyright:           2016 Author Here
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , process >= 1.1 && < 2
                     , X11 >= 1.5 && < 2
                     , xmonad >= 0.10 && < 1
                     , xmonad-contrib >= 0.10 && < 1
                     , xmonad-entryhelper == 0.1.*
                     , sgf-xmonad-modules == 0.4.*
                     , sgf-haskell-common == 0.1.*
  default-language:    Haskell2010

--test-suite sgf-xmonad-config-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , sgf-xmonad-config
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgf-dma/my-xmonad-config
