name:                sgf-xmonad
version:             1.0.0.3
synopsis:            sgf's xmonad config
description:         sgf's xmonda config
homepage:            http://github.com/sgf-dma/sgf-xmonad-config
license:             BSD3
license-file:        LICENSE
author:              sgf
maintainer:          sgf.dma@gmail.com
copyright:           2016 Author Here
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , process
                     , filepath
                     , directory
                     , X11
                     , xmonad
                     , xmonad-contrib
                     , xmonad-entryhelper
                     , sgf-xmonad-modules
                     , sgf-haskell-common
  default-language:    Haskell2010

executable default-xmonad
  hs-source-dirs:      src
  main-is:             default-xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , process
                     , filepath
                     , directory
                     , X11
                     , xmonad
                     , xmonad-contrib
                     , xmonad-entryhelper
                     , sgf-xmonad-modules
                     , sgf-haskell-common
  default-language:    Haskell2010

--test-suite sgf-xmonad-config-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , sgf-xmonad-config
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgf-dma/sgf-xmonad-config
